# src/main/java/com/example/demo/controller/TagController.java
@@ -8,6 +8,7 @@ import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -17,26 +18,31 @@ public class TagController implements TagsApi {
     private final TagService tagService;
 
     @Override
+    @PreAuthorize("hasAnyAuthority('ROLE_USER', 'ROLE_ADMIN')")
     public ResponseEntity<List<TagResponse>> getAllTags() {
         return ResponseEntity.ok(tagService.getAllTags());
     }
 
     @Override
+    @PreAuthorize("hasAnyAuthority('ROLE_USER', 'ROLE_ADMIN')")
     public ResponseEntity<TagResponse> getTagById(Long id) {
         return ResponseEntity.ok(tagService.getTagById(id));
     }
 
     @Override
+    @PreAuthorize("hasAuthority('ROLE_ADMIN')")
     public ResponseEntity<TagResponse> createTag(TagRequest tagRequest) {
         return ResponseEntity.status(HttpStatus.CREATED).body(tagService.createTag(tagRequest));
     }
 
     @Override
+    @PreAuthorize("hasAuthority('ROLE_ADMIN')")
     public ResponseEntity<TagResponse> updateTag(Long id, TagRequest tagRequest) {
         return ResponseEntity.ok(tagService.updateTag(id, tagRequest));
     }
 
     @Override
+    @PreAuthorize("hasAuthority('ROLE_ADMIN')")
     public ResponseEntity<Void> deleteTag(Long id) {
         tagService.deleteTag(id);
         return ResponseEntity.noContent().build();
